[gd_scene load_steps=2 format=3 uid="uid://menu123"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 48
text = "WORD JUMP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 80.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "How to Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="DifficultyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 550.0
offset_right = 100.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 18
text = "Difficulty"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 590.0
offset_right = 150.0
offset_bottom = 630.0
alignment = 1

[node name="EasyButton" type="Button" parent="DifficultyContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="DifficultyContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
disabled = true
text = "Medium"

[node name="HardButton" type="Button" parent="DifficultyContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
text = "Hard"

[node name="HowToPlayPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -250.0
offset_right = 280.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="HowToPlayPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "How to Play"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HowToPlayPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="HowToPlayPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "• Type the word to jump to the next platform

• Keep up with the auto-scroll or lose a life!

• Build combos for bonus points
  - 5 combo = +1 life
  - 20 combo = +2 lives

• Word Challenges (Medium/Hard):
  - Pink text = type it backwards
  - Blue text = fill in missing vowels

• Press ESC to pause"
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="HowToPlayPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="HowToPlayPanel/VBoxContainer"]
layout_mode = 2
text = "Back"
